--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3 copyright">
-        Cenit, LLC 2015
+        Cenit, LLC <%= Time.now.year %>
       </div>
       <div class="col-sm-6 menu">
         <ul>
