--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -1,47 +1,45 @@
 <div id="hero" class="<%= home ? '' : 'hub' %>">
-  <div id="<%= home ? "cover-image" : '' %>"  class="animated fadeIn">
+  <div id="<%= home ? "cover-image" : '' %>" class="animated fadeIn">
     <div class="container">
       <h1 class="hero-text animated fadeIn"><%= title %></h1>
       <% if home %>
-         <div class="cta animated fadeIn">
-          <% if user_signed_in? %>
-           <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
-             <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button button_hub' %>
-           <% end %>
-           <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
-             <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
-           <% end %>
-          <% else %>
-            <%= link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
-            <%= link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
-          <% end %>
-        </div>
-        
-        <div id="home">
-          <div id="slider">
-            <div class="slide-wrapper">
-              <div class="slideshow">
-                <div class="btn-nav prev"></div>
-                <div class="btn-nav next"></div>
-                <div class="slide active">
-                  <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'CenitHub Admin', style: "width: 700px; height: 360px;" %>
-                </div>
-                <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-flows.png', :alt => 'CenitHub Flows', style: "width: 700px; height: 360px;" %>
-                </div>
-                <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'CenitHub Shared Collections', style: "width: 700px; height: 360px;" %>
-                </div>
-                <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-translators.png', :alt => 'CenitHub Translators', style: "width: 700px; height: 360px;" %>
-                </div>
-                
-              </div>
-            </div>  
+          <div class="cta animated fadeIn">
+            <% if user_signed_in? %>
+                <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
+                    <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button button_hub' %>
+                <% end %>
+                <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
+                    <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
+                <% end %>
+            <% else %>
+                <%= link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
+                <%= link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
+            <% end %>
           </div>
-        </div>
-        
 
+          <div id="home">
+            <div id="slider">
+              <div class="slide-wrapper">
+                <div class="slideshow">
+                  <div class="btn-nav prev"></div>
+                  <div class="btn-nav next"></div>
+                  <div class="slide active">
+                    <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'CenitHub Admin', style: "width: 700px; height: 360px;" %>
+                  </div>
+                  <div class="slide">
+                    <%= image_tag 'screenshots/cenithub-flows.png', :alt => 'CenitHub Flows', style: "width: 700px; height: 360px;" %>
+                  </div>
+                  <div class="slide">
+                    <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'CenitHub Shared Collections', style: "width: 700px; height: 360px;" %>
+                  </div>
+                  <div class="slide">
+                    <%= image_tag 'screenshots/cenithub-translators.png', :alt => 'CenitHub Translators', style: "width: 700px; height: 360px;" %>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
       <% end %>
     </div>
   </div>
@@ -51,13 +49,21 @@
   <%= devise_error_messages! %>
   <% flash.each do |key, message| %>
       <%
-          klass = {"notice"=> "info", "success"=> "success", "alert"=> "warning", "error"=> "danger"}[key]
+         next unless message
+         klass =
+             {
+                 notice: 'info',
+                 success: 'success',
+                 alert: 'warning',
+                 error: 'danger'
+             }[key.to_sym] || 'info'
       %>
       <div class="alert alert-<%= klass %> col-xs-12 fade in">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-        <strong class="col-xs-2 col-sm-1"><%= key.capitalize %>!</strong>
-        <div class="col-xs-9 col-sm-10">
-          <%= message %>
+        <strong class="col-xs-2 col-sm-2"><%= key.capitalize %>!</strong>
+
+        <div class="col-xs-9 col-sm-9">
+          <%= message.html_safe %>
         </div>
       </div>
   <% end %>
@@ -66,49 +72,49 @@
 <script>
     $(function () {
 
-      // triggers the off-canvas panel
-      $(".sidebar-toggle").click(function (e) {
-        e.stopPropagation();
-        $(".st-container").toggleClass("nav-effect");
-      });
-      $(".st-pusher").click(function () {
-        $(".st-container").removeClass("nav-effect");
-      });
-      
-      $(".temp-button_hub").hover(
-        function() {
-          $( this )[0].text = 'Cenit Hub'
-        }, function() {
-          $( this )[0].text = 'Data Integrator'
-        }
-      );
-      
-      $(".temp-button_erp").hover(
-        function() {
-          $( this )[0].text = 'Odoo SaaS'
-        }, function() {
-          $( this )[0].text = 'ERP & CRM'
-        }
-      );
+        // triggers the off-canvas panel
+        $(".sidebar-toggle").click(function (e) {
+          e.stopPropagation();
+          $(".st-container").toggleClass("nav-effect");
+        });
+        $(".st-pusher").click(function () {
+          $(".st-container").removeClass("nav-effect");
+        });
 
-      // parallax header
-      $('#cover-image').css("background-position", "50% 50%");
-      $(window).scroll(function() {
-        var scroll = $(window).scrollTop(),
-          slowScroll = scroll/4,
-          slowBg = 50 - slowScroll;
-        $('#cover-image').css("background-position", "50% " + slowBg + "%");
-      });
+        $(".temp-button_hub").hover(
+            function () {
+              $(this)[0].text = 'Cenit Hub'
+            }, function () {
+              $(this)[0].text = 'Data Integrator'
+            }
+        );
 
-      $('#exampleModal').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget); // Button that triggered the modal
-        var recipient = button.data('whatever'); // Extract info from data-* attributes
-        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-        var modal = $(this);
-        modal.find('.modal-title').text('New message to ' + recipient);
-        modal.find('.modal-body input').val(recipient);
-      });
+        $(".temp-button_erp").hover(
+            function () {
+              $(this)[0].text = 'Odoo SaaS'
+            }, function () {
+              $(this)[0].text = 'ERP & CRM'
+            }
+        );
+
+        // parallax header
+        $('#cover-image').css("background-position", "50% 50%");
+        $(window).scroll(function () {
+          var scroll = $(window).scrollTop(),
+              slowScroll = scroll / 4,
+              slowBg = 50 - slowScroll;
+          $('#cover-image').css("background-position", "50% " + slowBg + "%");
+        });
+
+        $('#exampleModal').on('show.bs.modal', function (event) {
+          var button = $(event.relatedTarget); // Button that triggered the modal
+          var recipient = button.data('whatever'); // Extract info from data-* attributes
+          // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+          // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+          var modal = $(this);
+          modal.find('.modal-title').text('New message to ' + recipient);
+          modal.find('.modal-body input').val(recipient);
+        });
 
     });
 </script>
